[package]
name = "reqbit"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22.1"
config = "0.13"
async-trait = "0.1.81"