[package]
name = "reqbit"
version = "0.1.2"
edition = "2021"
authors = ["zTgx beautifularea@gmail.com"]
description = "A bitcore core RPC API"
license = "MIT"
repository = "https://github.com/zTgx/reqbit"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22.1"
config = "0.13"
async-trait = "0.1.81"
zmq = "0.10"
hex = "0.4"
byteorder = "1.4"
sha2 = "0.10"